crates/python_parser/tests/snapshots/invalid_syntax@expressions__attribute__invalid_member.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/attribute/invalid_member.py
---
## AST

```
Module(
    ModModule {
        range: 0..16,
        body: [
            Expr(
                ExprStmt {
                    range: 0..1,
                    value: Name(
                        NameExpr {
                            range: 0..1,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 1..3,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 1..3,
                            value: Float,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 4..5,
                    value: Name(
                        NameExpr {
                            range: 4..5,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 5..7,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 5..7,
                            value: Float,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 7..9,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 7..9,
                            value: Float,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 10..15,
                    value: Subscript(
                        SubscriptExpr {
                            range: 10..15,
                            value: Attribute(
                                AttributeExpr {
                                    range: 10..12,
                                    value: Name(
                                        NameExpr {
                                            range: 10..11,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 12..12,
                                    },
                                    ctx: Load,
                                },
                            ),
                            slice: NumberLiteral(
                                NumberLiteralExpr {
                                    range: 13..14,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x.1
  |  ^^ Syntax Error: Simple statements must be separated by newlines or semicolons
2 | x.1.0
3 | x.[0]
  |


  |
1 | x.1
2 | x.1.0
  |  ^^ Syntax Error: Simple statements must be separated by newlines or semicolons
3 | x.[0]
  |


  |
1 | x.1
2 | x.1.0
  |    ^^ Syntax Error: Simple statements must be separated by newlines or semicolons
3 | x.[0]
  |


  |
1 | x.1
2 | x.1.0
3 | x.[0]
  |   ^ Syntax Error: Expected an identifier
  |
